test/expected/define_rgi.out
define SI as register int
             ^
14: error: "typedef register int" is illegal for built-in type
